--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-    "name": "palette-gen",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
-    },
-    "dependencies": {
-      "colorthief": "^2.4.0",
-      "next": "13.3.0",
-      "react": "18.2.0",
-      "react-dom": "18.2.0"
-    }
+  "name": "palette-img-generator",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "colorthief": "^2.4.0",
+    "next": "^14.0.1",
+    "nodemon": "^3.0.1",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "14.0.1"
   }
+}
